avoiding letter-spacing

--- a/resources/css/styles.less
+++ b/resources/css/styles.less
@@ -43,6 +43,7 @@ h1,h2,h3,h4,h5,h6{
 p,li,a{
   font-family: @serifFont;
   font-size: 16px;
+  letter-spacing:normal;
 }
 dt{
   font-size: 1.4em;
